--- a/templates/error.html
+++ b/templates/error.html
@@ -37,6 +37,7 @@
 <body class="centered">
   <div class="emoji">😭</div>
   <p class="title">Ooooops!</p>
-  <p class="text">This page doesn't exist anymore.</p>
+  <p class="text">Tyou have to try it again! Do not put a zero in the DIVISION!!!</p>
+  <input type="button" onclick="history.back()" name="BACK" value="BACK">
 </body>
 </html>
